# example-flask-auth

./: .editorconfig  .env.example  .gitignore  .releaserc.json  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: commitlint.yml  depcheck.yml  integration.yml  linting.yml  pipeline.yml  release.yml  scorecard.yml  test.yml  typecheck.yml  unused.yml
app/: __init__.py
lib/: auth.py  config.py  message.py
test/: conftest.py
