[project]
name = "example-flask-auth"
version = "0.0.0"
description = "Flask application demonstrating ZITADEL authentication with PKCE using Authlib"
requires-python = ">=3.9,<4.0"
dependencies = [
  "Flask>=3.0,<4.0",
  "Authlib>=1.3.2,<2.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[project.urls]
repository = "https://github.com/zitadel/example-flask-auth"

[tool.poetry]
name = "example-flask-auth"
version = "0.0.0"
description = "Flask application demonstrating ZITADEL authentication with PKCE using Authlib"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
Flask = ">=3.0,<4.0"
Authlib = ">=1.3.2,<2.0.0"
python-dotenv = ">=1.0.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
mypy = ">=1.5"
ruff = ">=0.12.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test", "spec"]
python_files = "test_*.py *_spec.py"
addopts = [
  "--cov=app",
  "--cov=lib",
  "--cov-report=html:build/coverage/html",
  "--cov-report=xml:build/coverage/clover.xml",
]
junit_family = "xunit2"

[tool.coverage.run]
data_file = "build/coverage/.coverage"
omit = []

[tool.mypy]
python_version = "3.9"
files = ["app", "lib", "run.py"]
strict = true

[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 130
fix = true
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C", "N", "Q", "S", "T"]
extend-select = ["A"]
ignore = ["S101"]  # Ignore assert statements

[tool.fawltydeps]
ignore_unused = [
  "fawltydeps",
  "mypy",
  "pytest-cov",
  "pytest",
  "ruff"
]
